T02-Terraform-resources/02-Terraform-resources-behavior/02-resource-meta-arguments/01-depends_on/elastic-ip.tf
resource "aws_eip" "demo-eip" {
    instance = aws_instance.web.id
    vpc = true
    depends_on = [aws_instance.web] #[aws_internet_gateway.igw]
}
