T02-Terraform-resources/02-Terraform-resources-behavior/02-resource-meta-arguments/01-depends_on/igw.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.my_vpc.id

  tags = {
    Name = "Terraform-IGW"
  }
}
